--- a/templates/add_goal.html
+++ b/templates/add_goal.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div class="categories_img"></div>
 
+<!---------------------------------------form to add new goal--------------------------------->
 
 <div class="row add_goal_form">
     <div class="col s12">
