--- a/templates/categories.html
+++ b/templates/categories.html
@@ -4,14 +4,9 @@
 
 <div class="categories_img"></div>
 
-
-
+<!-------------------------------form to add new categrory-------------------------->
 <div class="row add_category">
-
     <h3> New Category </h3>
-
-
-
     <form action="categories/add" method="POST" enctype="multipart/form-data">
         <div class="row category_for_row ">
             <div class="input-field">
@@ -33,24 +28,12 @@
         </div>
 
         <div class="row category_for_row ">
-            
+
             <button class="btn waves-effect waves-light orange new_goal_button_on_form"><type="submit">Add Category<i class="material-icons right">playlist_add</i>
              </button>
-             
-             
-            <!--<button class="btn waves-effect waves-light" type="submit">Add Category-->
-            <!-- </button>-->
+
         </div>
     </form>
 </div>
-
-
-
-
-
-
-
-
-
 
 {% endblock content %}
