--- a/templates/add_step.html
+++ b/templates/add_step.html
@@ -2,24 +2,18 @@
 
 <div class="step_img"></div>
 
-
+<!---------------------------------------form to add new step--------------------------------->
 
 <div class="step_form">
     <div>
-       
         <h3> Add a Step to Your Goal "{{ goal.goal_name }}"</h3>
     </div>
-
-
 
     <div>
         <form method="POST">
             <input type="text" name="step">
-            
-            
-            <button class="btn waves-effect waves-light orange" type="submit" > Add </button>
+            <button class="btn waves-effect waves-light orange" type="submit"> Add </button>
         </form>
-
 
     </div>
 </div>
