--- a/templates/overview.html
+++ b/templates/overview.html
@@ -2,14 +2,9 @@
 
 <div class="goal_img"></div>
 
+<!--------------------------------------------first section------------------------------------------>
 
 <a href="#get_started" class="waves-effect waves-light white get_started_today"> <b>GET STARTED TODAY!</b></a>
-
-<!--<a href='#get_started'>-->
-<!--    <div class="get_started_today">-->
-<!--       GET STARTED TODAY!-->
-<!--    </div>-->
-<!--</a>-->
 
 
 <div class="row tagline">
@@ -28,30 +23,20 @@
                 <br><b>Why use Goal Keeper?</b> <br>
                 <a href='#reasons'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
         </div>
-
     </div>
-
-    <!--<div class="col s2"></div>-->
 </div>
 
-
+<!-------------------------------------reasons for using goal keeper section------------------------------------->
 
 <div class="row" id="reasons">
-
-
     <div class="heading_padded">Why set goals with Goal Keeper?</div>
-
-
     <div class="col s12 m4 reasons_for_goal_getter">
         <img src="{{ url_for('static', filename='images/focus.jpg')}}" class="vector_img"><br>
-
-
         <div class="reasons_paragraph"> <b>Clearer Focus</b> <br>Properly thought out and stated goals clearly set out your intentions and desires; the things you really want to achieve.</div>
     </div>
 
     <div class="col s12 m4 reasons_for_goal_getter">
         <img src="{{ url_for('static', filename='images/peace_of_mind.jpg')}}" class="vector_img"><br>
-
         <div class="reasons_paragraph"> <b>Peace of mind</b> <br>Too often you can have many things on your mind. Writing down your goals can help you take all of those ideas, apply perspective and priority, then galvanize you into commitment and action.</div>
     </div>
 
@@ -60,34 +45,27 @@
 
         <div class="reasons_paragraph"> <b>Measure your progress</b> <br>Setting goals allows you to measure how well effectively you are moving towards achieving them.</div>
     </div>
+
     <div class="row center">
         <div class="row"></div>
 
         <p>Get Started Today<br>
             <a href='#get_started'><i class="fas fa-angle-double-down font_awesome"></i></a></p>
     </div>
-
 </div>
 
-
-
-
+<!-------------------------------------------get started today section--------------------------------------------->
 
 <div class="row" id="get_started">
-
 
     <div class="heading">Get Started Today
         <div class="arrow2">&#8675;</div>
     </div>
 
-
-
     <div class="col s12 m6 l3 getting_started one">
         <div class="number"> 1 </div>
 
         <div class="reasons_paragraph"> <b>Goals</b> <br>Simply select "Add Goal" in the "Goals" secction to add your first goal today! </div>
-
-
     </div>
 
     <div class="col s12 m6 l3 getting_started two">
@@ -112,14 +90,5 @@
     </div>
 
 </div>
-</div>
-
-
-
-
-
-
-
-
 
 {% endblock %}
